# [build-system]
# requires = ["uv-build>=0.1.0"]
# build-backend = "uv_build"

[project]
name = "pkg-plus-plus"
version = "0.0.1"
authors = [
  { name="R A Veeraragavan", email="veeracoder123@gmail.com" },
]
description = "A simple package manager."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "pdoc3>=0.11.6",
    "requests>=2.33.1",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/veeracoder508/pkg"
Issues = "https://github.com/veeracoder508/pkg/issues"

[tool.setuptools.packages.find]
where = ["src"]
